--- a/flutter/earthquake/pubspec.yaml
+++ b/flutter/earthquake/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1
+  url_launcher: "^3.0.3"
 
 dev_dependencies:
   flutter_test:
